This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

03-Jun-2009 (Zesstra
  - We require C99 from now on. Remove checks and definitions for
    C99-incompatible systems.
    (port.h)
  - Changed a bunch of counters to statcounter_t to stop them from overflowing
    after a few weeks uptime. 
    (comm, interpret, mregex, mstrings, otable, simulate, swap)
  - Removed the deprecated efun cat() (#637)
    The efun cat can be easily and more flexibly replaced by an sefun.
    (files.c)

01-Jun-2009 (Gnomi)
  - Forked 3.5 off the 3.3 branch.

30-May-2009 (LDMud Team)  (3.3.719)
  - Created snapshot.

29-May-2009 (Gnomi)
  - (call_out.c) Preserve the order of call_out()s.
  - (mudlib/deprecated/hash.c) Added sefuns md5() and sha1().
  - (configure) Added a bunch of quotation marks.

28-May-2009 (Zesstra)
  - Added sefun cat(), updated documentation of cat().
    To reduce the workload of our users we supply implementations of
    deprecated and removed efuns. This time: the deprecated efun cat().
    (mudlib/deprecated/*)
  - Removed a configure check for ancient gcc on AIX.
  - Added checks to configure for the volatile keyword and VLAs.
  - Check the compiler for support of -fwrapv and enable if supported (enables
    a fully defined overflow/wrap behaviour of signed integers (#635).
  - Support for using mmap() to get memory from the system (slaballoc):
    sbrk() and brk() are obsoleted and some systems (like Darwin) don't have a
    working implementation anymore. If sbrk/brk() are not usable, but mmap()
    is available, use mmap() for mapping anonymous memory which we then use.
    If mmap() is not available, use the old fallback (system malloc()).
    Changed some precompiler checks for SBRK_OK, which should be
    REPLACE_MALLOC. (#640)
    (slaballoc.c, xalloc.c, configure.in)
  - Support for using mmap() to get memory from the system (smalloc). (#640)
    (smalloc.c)